2005-03-29  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/module.c (__get_thread_timeout): Fix signedness issue.

 	* RELEASE: fusion-0.7

2005-03-28  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/cruncher/cruncher.c (main): Limit stack space of
	spawned threads to PTHREAD_STACK_MIN * 2.

	* skins/rtai/lib/task.c (rt_task_create): Limit stack space to
	PTHREAD_STACK_MIN * 4 when none has been specified. 1Mb default is
	clearly overkill for real-time threads.

2005-03-28  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h (xnarch_save_fpu): Save
	user-space threads FPU context when switching to a kernel-space
	thread using FPU.
	(xnarch_enable_fpu): Restore FPU context of user-space tasks when
	not switching FPU on processors without fxsr, where fnsave, called
	by __switch_to, reinitialized FPU context.

2005-03-27  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6 final.

	* arch/i386/patches: Upgrade to Adeos 2.6.10,11-i386-r9 final.

	* include/nucleus/types.h: typedef unsigned long xnsigmask_t, so
	we can use atomic ops on this data type seamlessly.

2005-03-26  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/latency/[k]latency.c (display): Print out current test
	time.

	* include/nucleus/asm-*/syscall.h (__xn_copy_to/from_user):
	Silence GCC's "warn_unused_result" attribute and elaborate a bit
	on those macros.

2005-03-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pipe.c (xnpipe_read): Test return from copy_to_user()
	properly.

	* testsuite/[k]latency: Pass seconds to test duration switch (-T)
	instead of minutes.

2005-03-24  Jim Cromie <jcromie@divsol.com>

	* testsuite/klatency/latency.c, testsuite/latency/latency.c:
	Various user-level improvements including histogram dump for
	kernel space latency test.

2005-03-24  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c (__va_to_kva): Provide support for PAE.
